[package]
name = "payback"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
clap-stdin = "0.2.1"
csv = "1.2.2"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.19"
petgraph = "0.6.4"
serde = "1.0.188"
serde_derive = "1.0.188"
